2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/subtitle.py (__init__): Add optional keyword arguments 'mode'
	and 'framerate'.

	* gaupol/subtitle.py: Access the '_mode' attribute directly instead of
	accessing it as the property 'mode'.

2008-08-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/dialogs/language.glade:
	* gaupol/gtk/dialogs/language.py:
	Convert to landscape layout.

2008-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (Page._on_project_*): Call
	gaupol.gtk.util.iterate_main to update view.

2008-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/menu.py (MenuAgent): Update project actions on
	page-added and page-closed signals.

2008-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in (Letter "O" in a number): Fix
	replacement.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec: Remove option 'smart_open_translation' and
	add option 'align_method'.

	* data/glade/dialogs/open.glade:
	* gaupol/gtk/dialogs/open.py:
	Replace adapt check button with an align method combo box.

	* gaupol/agents/open.py (OpenAgent.open_translation):
	* gaupol/gtk/agents/open.py (OpenAgent.open_translation_file):
	Replace keyword argument 'smart' with 'align_method'.

	* gaupol/align.py: New file for align method enumerations.

	* gaupol/gtk/agents/open.py
	(OpenAgent.on_recent_translation_menu_item_activated): Always use align
	method 'position'.

	* gaupol/gtk/main.py: Replace '--adapt-translation' option with
	'--align-method'.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/locales.txt: Remove 'ns_ZA', for 'ns' is not found in
	'iso_639.xml'.

	* gaupol/gtk/dialogs/language.py (LanguageDialog._populate_store): Call
	'check' on the dictionary once to test that it works.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/locales.txt: Remove file.

	* gaupol/locales.py (get_all): Remove function.
