@@ -29,7 +29,7 @@ def _ensured(ensure_func):
         @functools.wraps(function)
         def inner_wrapper(*args, **kwargs):
             value = function(*args, **kwargs)
-            if gaupol.check_contracts:
+            if gaupol.debug:
                 ensure_func(args[0], value, *args[1:], **kwargs)
             return value
         return inner_wrapper
@@ -43,7 +43,7 @@ def _invariated(invariant_func):
         @functools.wraps(function)
         def inner_wrapper(*args, **kwargs):
             value = function(*args, **kwargs)
-            if gaupol.check_contracts:
+            if gaupol.debug:
                 invariant_func(args[0])
             return value
         return inner_wrapper
@@ -56,7 +56,7 @@ def _required(require_func):
     def outer_wrapper(function):
         @functools.wraps(function)
         def inner_wrapper(*args, **kwargs):
-            if gaupol.check_contracts:
+            if gaupol.debug:
                 require_func(*args, **kwargs)
             return function(*args, **kwargs)
         return inner_wrapper
