@@ -10,6 +10,7 @@ import sys
 
 file_dir = os.path.dirname(os.path.abspath(__file__))
 sys.path.insert(0, os.path.join(file_dir, ".."))
+os.environ["GAUPOL_DEBUG"] = ""
 
 # Unless planning on lazy loading modules,
 # we're not interested in profiling imports.
